...
    <string name="menu_page_citation">Cite this page</string>
    <string name="menu_page_generate_qr_code">Generate QR code</string>
    <string name="menu_page_share_nfc">Share via NFC</string>


    <!-- Long press menu -->
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>

    <!-- Toolbar menu items -->
    <string name="menu_text_select_copy">Copy</string>
    <string name="menu_text_select_define">Define</string>
...
    <string name="reading_list_turned_sync_off_dialog_ok">OK</string>
    <string name="reading_list_turned_sync_off_dialog_settings">Settings</string>
    <string name="reading_list_prompt_turned_sync_on_dialog_title">Turn on reading list sync?</string>
    <string name="reading_list_prompt_turned_sync_on_dialog_text"><![CDATA[Articles saved to reading lists can now be synced to your Wikipedia account. <a href="#faq">Learn more</a>]]></string>
    <string name="reading_list_prompt_turned_sync_on_dialog_do_not_show">Don’t show me this again</string>
    <string name="reading_list_prompt_turned_sync_on_dialog_enable_syncing">Enable syncing</string>
    <string name="reading_list_prompt_turned_sync_on_dialog_no_thanks">No thanks</string>
    <string name="reading_list_login_option_reminder_dialog_title">Reading list articles found</string>
    <string name="reading_list_login_option_reminder_dialog_text">Articles were saved to the reading list while you were logged out. Would you like to add them to the reading lists in your account?</string>
    <string name="reading_list_login_option_reminder_dialog_yes">Yes, add them to my reading lists</string>
    <string name="reading_list_login_option_reminder_dialog_no">No, delete articles</string>
    <string name="reading_list_logout_option_reminder_dialog_title">Keep saved articles in the app?</string>
    <string name="reading_list_logout_option_reminder_dialog_text">There are articles currently saved in reading lists. Would you like to keep them there after logging out?</string>
...
    </plurals>
    <string name="view_continue_reading_card_subtitle_today">today</string>
    <string name="view_continue_reading_card_subtitle_read_date">Read %s</string>
    <string name="view_announcement_card_negative_action">No thanks</string>
    <string name="view_offline_card_text">Content cannot be loaded when offline.</string>
    <string name="view_featured_article_card_title">Featured article</string>
    <string name="view_featured_article_footer_save_button_label">Save</string>
    <string name="view_featured_article_footer_saved_button_label">Saved</string>
    <string name="feed_configure_activity_title">Customize the feed</string>
    <string name="feed_configure_menu_reset">Restore default view</string>
    <string name="feed_configure_menu_select_all">Show all</string>
    <string name="feed_configure_menu_deselect_all">Hide all</string>
    <string name="feed_configure_language_warning">Note that not all card types are available in all Wikipedia languages. Edit your selected languages in Settings.</string>
...
    <string name="updated_time">Updated time</string>

    <string name="menu_text_select_add_notes">Add notes</string>

    <string name="button_share">Share NFC</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="created_at">Created at: </string>
    <string name="created_at_insert">Created time?</string>
    <string name="last_modified">Last modified: </string>
    <string name="last_modified_insert">last modified?</string>
    <string name="note_title_insert">Note title?</string>
    <string name="note_content_insert">note content?</string>
...
