<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="?attr/paper_color">

    <android.support.constraint.ConstraintLayout
...
        android:textAllCaps="false"
        android:textColor="@color/base0"
        android:textSize="16sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/notes"
        style="@style/TransparentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_mode_edit_white_24dp"
        android:fontFamily="sans-serif"
...
