...
            android:textColor="#000000">
        </TextView>

    </LinearLayout>

    <ListView
        android:id="@+id/notes_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_below="@+id/linearLayout1"
...
